# Semestre_6

./: README.md  git.sh
analyse_syntaxique/TP/: my_CMakeLists.txt
analyse_syntaxique/TP/a_TP1/tp1-flex/: CMakeLists.txt  lexer.l  main.c
analyse_syntaxique/TP/b_TP2/tp2-bison/: CMakeLists.txt  answer.md  expr_tree.h  lexer.l  main.c  main.h  parser.y
analyse_syntaxique/TP/turtle_classic/: turtle-lexer.l
base_de_données/td/.ipynb_checkpoints/: TD1_bis-checkpoint.ipynb
base_de_données/td/a_TD1/: TD1_bis.ipynb
base_de_données/td/b_TD2/: TD2.ipynb  TD2_NumPy.ipynb
base_de_données/td/c_TD3/: TD3_Pandas.html  TD3_Pandas.ipynb  TD3_Pandas.py  TD3_numpy.ipynb  cas_pratique.ipynb
base_de_données/td/d_td4/: td4.ipynb  td4.mhtml
base_de_données/tp/b_TP2/: employees.json
base_de_données/tp/c_TP3/: TP2.ipynb
sécurité/TP/TP_Heam/: alphabet.txt  custom_decrypte.py  decrypter.py  lettreFreq.py  long2.txt  napoleon1.txt  napoleon2.txt  piege.txt  piege2.txt  resultat_dechiffre.txt
sécurité/TP/TP_NOTE_COUCHOT/: data.txt
sécurité/TP/tp1/: TP1.ipynb  TP1.py
sécurité/TP/tp3/: TP3.ipynb  TP3.md  cipher.txt  mPrivKey.pem  mPubKey.pem
xml/TD/a_TD1/: films.dtd  water_bottles.dtd  water_bottles.xml
xml/TP/: init_saxon.sh
xml/TP/for-lc-1/: Decouverte_d_XPath.md  Decouverte_d_XPath.txt  automne-0.xml  automne-1.xml  books-0.xml  books-1.xml  cine-club-plus.dtd  for-lc-1.tar  init_saxon.sh  namespace-example-3.dtd  poemefr1.dtd  sf-0.dtd  sf-1.dtd  teacher-3.xml
xml/tp/for-lc-1/: Decouverte_d_XPath.md
xml/tp/for-lc-2/: ._saxon
xml/tp/for-lc-3/: automne-2.xml  (+5 more)
(+53 files in other folders)
